# tube-furnace

./: Justfile  pyproject.toml  requirements.txt
chip/: bisect.mpy  logging.mpy  main.py  minipb.mpy
common/: schema.py
desktop/: main.py
